--- a/survey.css
+++ b/survey.css
@@ -1,3 +1,109 @@
+.design
+{
+    margin-left:25%;
+}
+
+.header p{
+    font-style: italic;
+    
+}
+
+.header{
+    text-align: center; 
+    color: aliceblue; 
+    font-size: larger;
+}
+
 body{
-    margin-left:40%;
+    background-image: linear-gradient(
+        115deg,
+        rgba(58, 58, 158, 0.8),
+        rgba(136, 136, 206, 0.7)
+      ),
+      url("survey-form-background.jpeg");
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
+}
+
+.design{
+    background: rgba(27, 27, 50, 0.8);
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 25px;
+    color: aliceblue;
+    font-size: larger;
+    border-radius:10px;
+}
+
+.form-control {
+    display: block;
+    width: 95%;
+    height: 2.375rem;
+    padding: 0.375rem 0.75rem;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+input, button, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+
+.form-group {
+    margin: 0 auto 1.25rem auto;
+    padding: 0.25rem;
+}
+
+input[type="checkbox"],input[type="radio"]
+{
+    margin-right: 5px;
+}
+
+.button-submit{
+    display: block;
+    width: 100%;
+    height: 2.375rem;
+    padding: 0.375rem 0.75rem;
+    color: #f3f3f3;
+    background-color: #37af65;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control1 {
+    display: block;
+    width: 98%;
+    height: 2.375rem;
+    padding: 0.375rem 0.75rem;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control2 {
+    display: block;
+    width: 98%;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.padding{
+    margin-top: 15px;
 }
