--- a/survey.css
+++ b/survey.css
@@ -74,11 +74,9 @@ input[type="checkbox"],input[type="radio"]
     height: 2.375rem;
     padding: 0.375rem 0.75rem;
     color: #f3f3f3;
-    border-radius: 10px;
     background-color: #37af65;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border: none;
 }
 
 .form-control1 {
@@ -106,8 +104,8 @@ input[type="checkbox"],input[type="radio"]
 }
 
 .padding{
-    margin-top: 15px;
+    margin-top: 10px;
 }
 .margin{
-    margin-top: 20px;
+    margin-top: 10px;
 }
