--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -20,7 +20,7 @@ body{
         rgba(58, 58, 158, 0.8),
         rgba(136, 136, 206, 0.7)
       ),
-      url("assets/images/survey-form-background.jpeg");
+      url("../images/survey-form-background.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
