--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -1,11 +1,9 @@
-.design
-{
-    margin-left:25%;
+.design{
+    margin-left: 25%;
 }
 
 .header p{
-    font-style: italic;
-    
+    font-style: italic;   
 }
 
 .header{
@@ -36,7 +34,7 @@ body{
     border-radius:10px;
 }
 
-.form-control {
+.form-control{
     display: block;
     width: 95%;
     height: 2.375rem;
@@ -49,7 +47,7 @@ body{
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-input, button, select, textarea {
+input, button, select, textarea{
     margin: 0;
     font-family: inherit;
     font-size: inherit;
@@ -57,19 +55,17 @@ input, button, select, textarea {
 }
 
 
-.form-group {
+.form-group{
     margin: 0 auto 1.25rem auto;
     padding: 0.25rem;
 }
 
-input[type="checkbox"],input[type="radio"]
-{
+input[type="checkbox"],input[type="radio"]{
     margin-right: 6px;
 }
 
 .button-submit{
     display: block;
-
     width: 100%;
     height: 2.375rem;
     padding: 0.375rem 0.75rem;
@@ -79,7 +75,7 @@ input[type="checkbox"],input[type="radio"]
     border: none;
 }
 
-.form-control1 {
+.form-control1{
     display: block;
     width: 98%;
     height: 2.375rem;
@@ -92,7 +88,7 @@ input[type="checkbox"],input[type="radio"]
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.form-control2 {
+.form-control2{
     display: block;
     width: 98%;
     color: #495057;
@@ -106,6 +102,7 @@ input[type="checkbox"],input[type="radio"]
 .padding{
     margin-top: 10px;
 }
+
 .margin{
     margin-top: 10px;
 }
