--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -1,18 +1,15 @@
-.design {
-    margin-left: 25%;
-}
+.design{
+    margin-left: 25%;}
 
-.header p {
-    font-style: italic;   
-}
+.header p{
+font-style: italic;}
 
-.header {
+.header{
     text-align: center; 
     color: aliceblue; 
-    font-size: larger;
-}
+    font-size: larger;}
 
-body {
+body{
     background-image: linear-gradient(
         115deg,
         rgba(58, 58, 158, 0.8),
@@ -21,20 +18,18 @@ body {
       url("../images/survey-form-background.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
-   background-position: center;
-}
+   background-position: center;}
 
-.design {
+.design{
     background: rgba(27, 27, 50, 0.8);
     margin-left: 20%;
     margin-right: 20%;
     padding: 25px;
     color: aliceblue;
     font-size: larger;
-    border-radius:10px;
-}
+    border-radius:10px;}
 
-.form-control {
+.form-control{
     display: block;
     width: 95%;
     height: 2.375rem;
@@ -44,27 +39,22 @@ body {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;}
 
-input, button, select, textarea {
+input button select textarea{
     margin: 0;
     font-family: inherit;
     font-size: inherit;
-    line-height: inherit;
-}
+    line-height: inherit;}
 
-
-.form-group {
+.form-group{
     margin: 0 auto 1.25rem auto;
-    padding: 0.25rem;
-}
+    padding: 0.25rem;}
 
-input[type="checkbox"], input[type="radio"] {
-    margin-right: 6px;
-}
+input[type="checkbox"] input[type="radio"]{
+    margin-right: 6px;}
 
-.button-submit {
+.button-submit{
     display: block;
     width: 100%;
     height: 2.375rem;
@@ -72,10 +62,9 @@ input[type="checkbox"], input[type="radio"] {
     color: #f3f3f3;
     background-color: #37af65;
     background-clip: padding-box;
-    border: none;
-}
+    border: none;}
 
-.form-control1 {
+.form-control1{
     display: block;
     width: 98%;
     height: 2.375rem;
@@ -85,10 +74,9 @@ input[type="checkbox"], input[type="radio"] {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;}
 
-.form-control2 {
+.form-control2{
     display: block;
     width: 98%;
     color: #495057;
@@ -96,13 +84,10 @@ input[type="checkbox"], input[type="radio"] {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;}
 
-.padding {
-    margin-top: 10px;
-}
+.padding{
+    margin-top: 10px;}
 
-.margin {
-    margin-top: 10px;
-}
+.margin{
+    margin-top: 10px;}
