--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -1,22 +1,20 @@
-.design {
-  margin-left: 25%;
-}
-
 .header p {
-  font-style: italic;   
+  font-style: italic;
 }
 
 .header {
-  text-align: center; 
-  color: aliceblue; 
+  text-align: center;
+
+  color: aliceblue;
+
   font-size: larger;
 }
 
-body {
+body {      
   background-image: linear-gradient(
         115deg,
-        rgba(58, 58, 158, 0.8),
-        rgba(136, 136, 206, 0.7)
+          rgba(58, 58, 158, 80%),
+          rgba(136, 136, 206, 70%)
       ),
       url("../images/survey-form-background.jpeg");
   background-size: cover;
@@ -25,7 +23,7 @@ body {
 }
 
 .design {
-  background: rgba(27, 27, 50, 0.8);
+  background: rgba(27, 27, 50, 80%);
   margin-left: 20%;
   margin-right: 20%;
   padding: 25px;
@@ -33,7 +31,7 @@ body {
   font-size: larger;
   border-radius:10px;
 }
-
+ 
 .form-control {
   display: block;
   width: 95%;
@@ -54,9 +52,8 @@ input, button, select, textarea {
   line-height: inherit;
 }
 
-
 .form-group {
-  margin: 0 auto 1.25rem auto;
+  margin: 0 auto 1.25rem;
   padding: 0.25rem;
 }
 
