--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -4,19 +4,12 @@
 
 .header {
   text-align: center;
-
   color: aliceblue;
-
   font-size: larger;
 }
 
 body {      
-  background-image: linear-gradient(
-        115deg,
-          rgba(58, 58, 158, 80%),
-          rgba(136, 136, 206, 70%)
-      ),
-      url("../images/survey-form-background.jpeg");
+  background-image: linear-gradient(115deg, rgba(58, 58, 158, 80%), rgba(136, 136, 206, 70%)), url("../images/survey-form-background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
