--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -8,15 +8,16 @@
   font-size: larger;
 }
 
-body {      
-  background-image: linear-gradient(115deg, rgba(58, 58, 158, 80%), rgba(136, 136, 206, 70%)), url("../images/survey-form-background.jpeg");
+body {
+ 
+  background-image: linear-gradient(115deg, rgb(58 58 158 80%), rgb(136 136 206 70%)), url("../images/survey-form-background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .design {
-  background: rgba(27, 27, 50, 80%);
+  background: rgb(27 27 50 80%);
   margin-left: 20%;
   margin-right: 20%;
   padding: 25px;
@@ -24,7 +25,7 @@ body {
   font-size: larger;
   border-radius:10px;
 }
- 
+
 .form-control {
   display: block;
   width: 95%;
@@ -38,7 +39,7 @@ body {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-input, button, select, textarea {
+input button select textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
