--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -9,7 +9,6 @@
 }
 
 body {
- 
   background-image: linear-gradient(115deg, rgb(58 58 158 80%), rgb(136 136 206 70%)), url("../images/survey-form-background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -23,7 +22,7 @@ body {
   padding: 25px;
   color: aliceblue;
   font-size: larger;
-  border-radius:10px;
+  border-radius: 10px;
 }
 
 .form-control {
@@ -51,7 +50,7 @@ input button select textarea {
   padding: 0.25rem;
 }
 
-input[type="checkbox"],input[type="radio"] {
+input[type="checkbox"] input[type="radio"] {
   margin-right: 6px;
 }
 
