--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -90,9 +90,10 @@ input[type="checkbox"] input[type="radio"] {
 }
 
 .padding {
-  margin-top: 10px; 
+  margin-top: 10px;
 }
 
 .margin {
-  margin-top: 10px; 
+  margin-top: 10px;
 }
+\n
