--- a/assets/styles/survey.css
+++ b/assets/styles/survey.css
@@ -9,14 +9,14 @@
 }
 
 body {
-  background-image: linear-gradient(115deg, rgb(58, 58, 158, 80%), rgb(136, 136, 206, 70%)), url("../images/survey-form-background.jpeg");
+  background-image: linear-gradient(115deg, rgb(58 58 158 / 80%), rgb(136 136 206 / 70%)), url("../images/survey-form-background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .design {
-  background: rgb(27, 27, 50, 80%);
+  background: rgb(27 27 50 / 80%);
   margin-left: 20%;
   margin-right: 20%;
   padding: 25px;
